--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
           id="search-field"
           type="text"
           placeholder="search your phones"
-          class="input bg-[#100f0f0d] w-[500px] border-0 focus:outline-none"
+          class="input bg-[#100f0f0d] lg:w-[500px] w-70% border-0 focus:outline-none"
         />
         <button
           onclick="handleSearch()"
-          class="btn bg-[#0D6EFD] text-white px-8"
+          class="btn bg-[#0D6EFD] text-white lg:px-8 px-4 ml-2"
         >
           Search
         </button>
@@ -42,7 +42,7 @@
 
         <div
           id="phone-container"
-          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 lg:mx-0 mx-2"
         ></div>
       </section>
       <!--Show Modal Start-->
